--- a/templates/ActualizarCuenta.html
+++ b/templates/ActualizarCuenta.html
@@ -44,7 +44,7 @@
     </form>
     <form class="formulario" action="{% url 'ActualizarCuenta:super' %}" method="POST">
       {% csrf_token %}
-      <div class="formulario__titulo">Super Usuario</div>
+      <div class="formulario__titulo">Super usuario</div>
       <div class="form-check form-switch">
         <input type="checkbox" name="superUsuario" value="True" class="form-check-input" id="switch">
         <label for="switch" class="form-check-label">Presione</label>
